# aSPARK-policy

./: .gitignore  CONTRIBUTING.md  CONVENTIONS.md  FORMAT-REFERENCE.md  LICENSE  README.md  pyproject.toml
packs/: README.md
packs/architecture/: README.md
packs/architecture/clean-architecture/: architecture.md  pack.yaml  policy.yaml
packs/cloud/: README.md
packs/cloud/aws/: cloud.md  pack.yaml  policy.yaml
packs/cloud/azure/: cloud.md  pack.yaml  policy.yaml
packs/compliance/iso27001/: compliance.md  pack.yaml  policy.yaml
packs/compliance/owasp/: pack.yaml  policy.yaml  security.md
packs/framework/: README.md
packs/framework/react/: conventions.md  pack.yaml  policy.yaml
packs/framework/spring/: conventions.md  pack.yaml  policy.yaml
packs/language/: README.md
packs/language/java/: conventions.md  pack.yaml  policy.yaml
packs/platform/: README.md
src/aspark_policy/: __init__.py
src/aspark_policy/schemas/: pack-policy.schema.json  pack.schema.json  project-policy.schema.json
tests/: test_format_schemas.py  test_smoke.py
tests/fixtures/format/: pack-bad.yaml  pack-good.yaml  policy-bad.yaml  policy-good.yaml  rule-anatomy-bad.yaml  rule-anatomy-good.yaml
